--- a/index.html
+++ b/index.html
@@ -367,17 +367,21 @@ other ui elements:
                       <div class="link_line"></div>
                     </div>
                     <div class="link_wrap is_third">
-                      <a href="/voices-en" class="nav-link w-nav-link"
+                      <a href="./voices-en.html" class="nav-link w-nav-link"
                         >Voices</a
                       >
                       <div class="link_line"></div>
                     </div>
                     <div class="link_wrap is_fourth">
-                      <a href="/music-en" class="nav-link w-nav-link">Music</a>
+                      <a href="./music-en.html" class="nav-link w-nav-link"
+                        >Music</a
+                      >
                       <div class="link_line"></div>
                     </div>
                     <div class="link_wrap is_fifth">
-                      <a href="/video-en" class="nav-link w-nav-link">Film</a>
+                      <a href="./video-en.html" class="nav-link w-nav-link"
+                        >Film</a
+                      >
                       <div class="link_line"></div>
                     </div>
                     <div
