--- a/london-kings-place.html
+++ b/london-kings-place.html
@@ -301,14 +301,16 @@
                         <div class="dropdown_links_wrap">
                           <div class="wrapper_horizontal">
                             <div class="link_wrap">
-                              <a href="/oxford" class="archive_link">Oxford</a>
+                              <a href="./oxford.html" class="archive_link"
+                                >Oxford</a
+                              >
                               <div class="link_line"></div>
                             </div>
                           </div>
                           <div class="wrapper_horizontal">
                             <div class="link_wrap">
                               <a
-                                href="/london-pushkin-house"
+                                href="./london-pushkin-house.html"
                                 class="archive_link"
                               >
                                 London / <em>Pushkin House</em>
@@ -319,7 +321,7 @@
                           <div class="wrapper_horizontal">
                             <div class="link_wrap">
                               <a
-                                href="/london-kings-place"
+                                href="./london-kings-place.html"
                                 aria-current="page"
                                 class="archive_link w--current"
                               >
