Update link for index

--- a/index.html
+++ b/index.html
@@ -416,14 +416,16 @@ other ui elements:
                         <div class="dropdown_links_wrap">
                           <div class="wrapper_horizontal">
                             <div class="link_wrap">
-                              <a href="/oxford" class="archive_link">Oxford</a>
+                              <a href="./oxford.html" class="archive_link"
+                                >Oxford</a
+                              >
                               <div class="link_line"></div>
                             </div>
                           </div>
                           <div class="wrapper_horizontal">
                             <div class="link_wrap">
                               <a
-                                href="/london-pushkin-house"
+                                href="./london-pushkin-house.html"
                                 class="archive_link"
                               >
                                 London / <em>Pushkin House</em>
@@ -434,7 +436,7 @@ other ui elements:
                           <div class="wrapper_horizontal">
                             <div class="link_wrap">
                               <a
-                                href="/london-kings-place"
+                                href="./london-kings-place.html"
                                 class="archive_link"
                               >
                                 London / <em>Kings Place</em>
